<resources>
    <string name="app_name">Groessenmesser</string>
    <string name="camera_activity_title">Measure angles</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="launchCameraActivity">Get Angles</string>
    <string name="alpha">\u03B1</string>
    <string name="beta">\u03B2</string>
    <string name="distance_a">Distance | a</string>
    <string name="caluclateHeight_Button">Calculate</string>
    <string name="height_b">Height | b</string>
</resources>
